--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "preview": "vite preview --host 0.0.0.0 --port 4173"
   },
   "dependencies": {
-    "@stellar/freighter-api": "^5.3.1",
+    "@stellar/freighter-api": "latest",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "stellar-sdk": "^13.3.0"
